[gd_scene load_steps=4 format=2]

[ext_resource path="res://Generator/Room_Manager/Room_Manager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Generator/Generator/Generator.gd" type="Script" id=2]
[ext_resource path="res://Entities/Hero/Hero.tscn" type="PackedScene" id=3]

[node name="Generator" type="Node2D"]
script = ExtResource( 2 )

[node name="Room_Manager" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
z_index = 1

[node name="change_timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.05
one_shot = true
[connection signal="timeout" from="change_timer" to="." method="_on_change_timer_timeout"]
